[CHK-465] Add payment-gateway-service client (#28)
* feat(payment-transactions-gateway): add payment-transactions-gateway client

* docs: add env vars to .env.example

* fix: fix paymentTransactionGateayWebClient spring var binding

* feat(pgs): add `payment-gateway-service` client

* feat(pgs): add handler and command to authorize transactions

* fix: misc fixes

* test: fix tests

* feat(pgs-client): add check for already authorized transaction

* refactor: add separate exception for wrong psp parameters

* refactor: use autogenerated api client instead of spring webclient

* fix(test): add missing fields to request authorization

* test(paymentgatewayclient): add tests for payment gateway client

* test(transactioncontroller): add tests for new exception handlers

* feat: add error handling for pgs 500 and 504 HTTP status codes

* refactor: remove useless log line

* refactor(api-spec): reword authorization 409 description

* refactor(api-spec): add 500 status code & response to authorization endpoint

* refactor: rename `AlreadyAuthorizedException` -> `AlreadyProcessedException`

* fix: set `UnsatisfiablePspRequestException` response status to same as handler

Co-authored-by: Simone infante <52280205+infantesimone@users.noreply.github.com>

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>3.0.0</version>
@@ -201,7 +206,7 @@
                             <modelNameSuffix>dto</modelNameSuffix>
                         </configuration>
                     </execution>
-                    <execution>
+                     <execution>
                         <id>payment-instruments-api</id>
                         <goals>
                             <goal>generate</goal>
@@ -220,6 +225,28 @@
                             </configOptions>
                             <modelPackage>it.pagopa.generated.ecommerce.paymentinstruments.v1.dto</modelPackage>
                             <apiPackage>it.pagopa.generated.ecommerce.paymentinstruments.v1.api</apiPackage>
+                            <modelNameSuffix>dto</modelNameSuffix>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>transactions-gateway-api</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>https://raw.githubusercontent.com/pagopa/pagopa-infra/main/src/api/payment_transactions_gateway_api/v1/_openapi.json.tpl</inputSpec>
+                            <generatorName>java</generatorName>
+                            <library>webclient</library>
+                            <generateApiDocumentation>false</generateApiDocumentation>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
+                            <generateSupportingFiles>true</generateSupportingFiles>
+                            <configOptions>
+                                <swaggerAnnotations>false</swaggerAnnotations>
+                                <openApiNullable>false</openApiNullable>
+                            </configOptions>
+                            <modelPackage>it.pagopa.generated.ecommerce.gateway.v1.dto</modelPackage>
+                            <apiPackage>it.pagopa.generated.ecommerce.gateway.v1.api</apiPackage>
                             <modelNameSuffix>dto</modelNameSuffix>
                         </configuration>
                     </execution>
