--- a/api-spec/api.yaml
+++ b/api-spec/api.yaml
@@ -79,6 +79,24 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ProblemJson"
+        409:
+          description: Transaction already processed
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
+        504:
+          description: Gateway timeout
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
 components:
   schemas:
     RptId:
