--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ nodo.connectionTimeout=${NODO_CONNECTION_TIMEOUT}
 ecommerceSessions.uri=http://${ECOMMERCE_SESSIONS_URI}/sessions
 ecommerceSessions.readTimeout=${ECOMMERCE_SESSIONS_READ_TIMEOUT}
 ecommerceSessions.connectionTimeout=${ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT}
+paymentTransactionsGateway.uri=http://${PAYMENT_TRANSACTIONS_GATEWAY_URI}/
+paymentTransactionsGateway.readTimeout=${PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT}
+paymentTransactionsGateway.connectionTimeout=${PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT}
 ecommercePaymentInstruments.uri=http://${ECOMMERCE_PAYMENT_INSTRUMENTS_URI}/payment-instruments/psps
 ecommercePaymentInstruments.readTimeout=${ECOMMERCE_PAYMENT_INSTRUMENTS_READ_TIMEOUT}
 ecommercePaymentInstruments.connectionTimeout=${ECOMMERCE_PAYMENT_INSTRUMENTS_CONNECTION_TIMEOUT}
