--- a/api-spec/api.yaml
+++ b/api-spec/api.yaml
@@ -268,6 +268,7 @@ components:
       description: Possible statuses a transaction can be in
       enum:
         - INITIALIZED
+        - AUTHORIZED
     ProblemJson:
       type: object
       properties:
