feat: add basic nodo config

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -92,6 +92,7 @@ microservice-chart:
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
+    NODO_CONNECTION_STRING: nodo-connection-string
 
   keyvault:
     name: "pagopa-d-ecommerce-kv"
