--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ REDIS_PASSWORD="redis_password"
 NODO_URI="http://pagopa-node-mock:3002/webservices/pof/PagamentiTelematiciPspNodoservice"
 NODO_READ_TIMEOUT=10000
 NODO_CONNECTION_TIMEOUT=10000
+NODO_CONNECTION_PARAMS="{\"idPsp\":\"idPsp\",\"idChannel\":\"idChannel\",\"idBrokerPsp\":\"idBrokerPsp\",\"password\":\"password\"}"
+
 ECOMMERCE_SESSIONS_URI="pagopa-ecommerce-sessions-service:8080"
 ECOMMERCE_SESSIONS_READ_TIMEOUT=10000
 ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT=10000
