--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ logging.level.web=debug
 nodo.uri=${NODO_URI}
 nodo.readTimeout=${NODO_READ_TIMEOUT}
 nodo.connectionTimeout=${NODO_CONNECTION_TIMEOUT}
+nodo.connection.string=${NODO_CONNECTION_STRING}
 ecommerceSessions.uri=http://${ECOMMERCE_SESSIONS_URI}/sessions
 ecommerceSessions.readTimeout=${ECOMMERCE_SESSIONS_READ_TIMEOUT}
 ecommerceSessions.connectionTimeout=${ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT}
