--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -2,6 +2,7 @@ nodo.uri=https://localhost/nodo
 nodo.readTimeout=10000
 nodo.connectionTimeout=10000
 nodo.retry=2
+nodo.connection.string={"idPSP":"idPsp","idChannel":"idChannel","idBrokerPSP":"idBrokerPSP","password":"password"}
 ecommerceSessions.uri=https://localhost/nodo
 ecommerceSessions.readTimeout=10000
 ecommerceSessions.connectionTimeout=10000
