--- a/.env.example
+++ b/.env.example
@@ -8,14 +8,14 @@ NODO_READ_TIMEOUT=10000
 NODO_CONNECTION_TIMEOUT=10000
 NODO_CONNECTION_PARAMS="{\"idPsp\":\"idPsp\",\"idChannel\":\"idChannel\",\"idBrokerPsp\":\"idBrokerPsp\",\"password\":\"password\"}"
 
-ECOMMERCE_SESSIONS_URI="pagopa-ecommerce-sessions-service:8080"
+ECOMMERCE_SESSIONS_URI="http://pagopa-ecommerce-sessions-service:8080"
 ECOMMERCE_SESSIONS_READ_TIMEOUT=10000
 ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT=10000
 
-PAYMENT_TRANSACTIONS_GATEWAY_URI="pagopa-payment-transactions-gateway:8080"
+PAYMENT_TRANSACTIONS_GATEWAY_URI="http://pagopa-payment-transactions-gateway:8080"
 PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT=10000
 PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT=10000
 
-ECOMMERCE_PAYMENT_INSTRUMENTS_URI="pagopa-ecommerce-payment-instruments-service:8080"
+ECOMMERCE_PAYMENT_INSTRUMENTS_URI="http://pagopa-ecommerce-payment-instruments-service:8080"
 ECOMMERCE_PAYMENT_INSTRUMENTS_READ_TIMEOUT=10000
 ECOMMERCE_PAYMENT_INSTRUMENTS_CONNECTION_TIMEOUT=10000
