--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -82,12 +82,18 @@ microservice-chart:
     MONGO_HOST: pagopa-d-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
     MONGO_USERNAME: pagopa-d-weu-ecommerce-cosmos-account
     REDIS_HOST: privatelink.ecommerce.redis.azure.com
-    NODO_URI: https://api.dev.platform.pagopa.it
+    NODO_URI: https://api.dev.platform.pagopa.it/nodo/nodo-per-psp/v1
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
-    ECOMMERCE_SESSIONS_URI: pagopa-ecommerce-sessions-service:8080
+    ECOMMERCE_SESSIONS_URI: https://api.dev.platform.pagopa.it/ecommerce/sessions-service/v1
     ECOMMERCE_SESSIONS_READ_TIMEOUT: "10000"
     ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT: "10000"
+    ECOMMERCE_PAYMENT_INSTRUMENTS_URI: https://api.dev.platform.pagopa.it/ecommerce/payment-instruments-service/v1
+    ECOMMERCE_PAYMENT_INSTRUMENTS_READ_TIMEOUT: 10000
+    ECOMMERCE_PAYMENT_INSTRUMENTS_CONNECTION_TIMEOUT: 10000
+    PAYMENT_TRANSACTIONS_GATEWAY_URI: http://pagopa-ecommerce-payment-instruments-service:8080
+    PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: 10000
+    PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: 10000
 
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
