--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -89,11 +89,11 @@ microservice-chart:
     ECOMMERCE_SESSIONS_READ_TIMEOUT: "10000"
     ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT: "10000"
     ECOMMERCE_PAYMENT_INSTRUMENTS_URI: https://api.dev.platform.pagopa.it/ecommerce/payment-instruments-service/v1
-    ECOMMERCE_PAYMENT_INSTRUMENTS_READ_TIMEOUT: 10000
-    ECOMMERCE_PAYMENT_INSTRUMENTS_CONNECTION_TIMEOUT: 10000
+    ECOMMERCE_PAYMENT_INSTRUMENTS_READ_TIMEOUT: "10000"
+    ECOMMERCE_PAYMENT_INSTRUMENTS_CONNECTION_TIMEOUT: "10000"
     PAYMENT_TRANSACTIONS_GATEWAY_URI: http://pagopa-ecommerce-payment-instruments-service:8080
-    PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: 10000
-    PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: 10000
+    PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
+    PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
 
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
