--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -81,7 +81,8 @@ microservice-chart:
   envConfig:
     MONGO_HOST: pagopa-d-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
     MONGO_USERNAME: pagopa-d-weu-ecommerce-cosmos-account
-    REDIS_HOST: privatelink.ecommerce.redis.azure.com
+    MONGO_PORT: "10255"
+    REDIS_HOST: pagopa-d-weu-ecommerce-redis.privatelink.redis.cache.windows.net
     NODO_URI: https://api.dev.platform.pagopa.it/nodo/nodo-per-psp/v1
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
