--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 MONGO_HOST="pagopa-ecommerce-mongo"
 MONGO_USERNAME=admin
 MONGO_PASSWORD=password
+MONGO_PORT=27001
 REDIS_HOST="pagopa-ecommerce-redis"
 REDIS_PASSWORD="redis_password"
+REDIS_PORT=6379
 NODO_URI="http://pagopa-node-mock:3002/webservices/pof/PagamentiTelematiciPspNodoservice"
 NODO_READ_TIMEOUT=10000
 NODO_CONNECTION_TIMEOUT=10000
