--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.redis.host=${REDIS_HOST}
 spring.redis.password=${REDIS_PASSWORD}
 spring.redis.port=${REDIS_PORT}
 spring.redis.ssl=true
+spring.data.redis.repositories.type=none
 spring.jackson.default-property-inclusion=non_null
 logging.level.web=debug
 nodo.uri=${NODO_URI}
