--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -12,3 +12,8 @@ ecommercePaymentInstruments.connectionTimeout=10000
 paymentTransactionsGateway.uri=http://localhost/pgs
 paymentTransactionsGateway.readTimeout=10000
 paymentTransactionsGateway.connectionTimeout=10000
+spring.data.mongodb.uri=mongodb://mongo:mongo@$mongo:6080/?ssl=true&replicaSet=globaldb
+spring.data.mongodb.database=ecommerce
+spring.redis.host=redis
+spring.redis.password=redis
+spring.redis.port=9999
