feat: add transactionID

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ REDIS_PORT=6379
 NODO_URI="http://pagopa-node-mock:3002/webservices/pof/PagamentiTelematiciPspNodoservice"
 NODO_READ_TIMEOUT=10000
 NODO_CONNECTION_TIMEOUT=10000
-NODO_CONNECTION_PARAMS="{\"idPsp\":\"idPsp\",\"idChannel\":\"idChannel\",\"idBrokerPsp\":\"idBrokerPsp\",\"password\":\"password\"}"
+NODO_CONNECTION_STRING="{\"idPSP\":\"idPsp\",\"idChannel\":\"idChannel\",\"idBrokerPSP\":\"idBrokerPsp\",\"password\":\"password\"}"
 
 ECOMMERCE_SESSIONS_URI="http://pagopa-ecommerce-sessions-service:8080"
 ECOMMERCE_SESSIONS_READ_TIMEOUT=10000
