refactor(auth): separate Nodo transaction closure into separate event

--- a/api-spec/api.yaml
+++ b/api-spec/api.yaml
@@ -339,6 +339,8 @@ components:
         - AUTHORIZATION_REQUESTED
         - AUTHORIZED
         - AUTHORIZATION_FAILED
+        - CLOSED
+        - CLOSURE_FAILED
     ProblemJson:
       type: object
       properties:
