[CHK-492] Implement command handlers for transaction authorization status update (#35)
* feat(nodo): add `closePayment` implementation to Nodo client

* refactor: rename `Authorize{Command,Handler}` -> `RequestAuthorization{Command,Handler}`

* feat(closepayment): add call to Node `closePayment`

* build: fix build

* refactor(auth): include transaction id in authorization info

* refactor(auth): remove `paymentTypeCode` from auth request

* refactor(auth): remove broker name from auth request

* refactor(auth): remove psp channel code from auth request

* refactor(auth): use data from authorization to invoke Nodo `closePayment`

* refactor: remove `additionalInformations` field from auth status update request

* refactor(auth): remove Nodo closepayment responsibilities from authorization handler

* refactor(auth): separate Nodo transaction closure into separate event

* feat(closure): add transaction closure after transaction authorization

* test(auth): add auth controller tests

* test(auth): add tests for auth in transactions service

* test: add tests for closure and auth handlers

* refactor: rename event OUTCOME_UPDATED -> CLOSURE_REQUESTED

* refactor: fix log string

--- a/api-spec/api.yaml
+++ b/api-spec/api.yaml
@@ -133,6 +133,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ProblemJson"
+        502:
+          description: Bad gateway
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
         504:
           description: Gateway timeout
           content:
@@ -222,10 +228,20 @@ components:
       properties:
         authorizationResult:
           $ref: '#/components/schemas/AuthorizationResult'
+        timestampOperation:
+          type: string
+          format: date-time
+          description: Payment timestamp
+        authorizationCode:
+          type: string
+          description: Payment gateway-specific authorization code related to the transaction
       required:
         - authorizationResult
+        - timestampOperation
+        - authorizationCode
       example:
         authorizationResult: OK
+        timestampOperation: 2022-02-11T13:00:00+01:00
     TransactionInfo:
       description: Transaction data returned when querying for an existing transaction
       allOf:
@@ -327,6 +343,10 @@ components:
       enum:
         - INITIALIZED
         - AUTHORIZATION_REQUESTED
+        - AUTHORIZED
+        - AUTHORIZATION_FAILED
+        - CLOSED
+        - CLOSURE_FAILED
     ProblemJson:
       type: object
       properties:
