--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.redis.host=${REDIS_HOST}
 spring.redis.password=${REDIS_PASSWORD}
 spring.redis.port=${REDIS_PORT}
-spring.redis.ssl=true
+spring.redis.ssl=false
 spring.data.redis.repositories.type=none
 spring.jackson.default-property-inclusion=non_null
 logging.level.web=debug
@@ -18,7 +18,7 @@ paymentTransactionsGateway.connectionTimeout=${PAYMENT_TRANSACTIONS_GATEWAY_CONN
 ecommercePaymentInstruments.uri=${ECOMMERCE_PAYMENT_INSTRUMENTS_URI}/payment-instruments/psps
 ecommercePaymentInstruments.readTimeout=${ECOMMERCE_PAYMENT_INSTRUMENTS_READ_TIMEOUT}
 ecommercePaymentInstruments.connectionTimeout=${ECOMMERCE_PAYMENT_INSTRUMENTS_CONNECTION_TIMEOUT}
-spring.data.mongodb.uri=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/?ssl=true&replicaSet=globaldb
+spring.data.mongodb.uri=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/?ssl=false
 spring.data.mongodb.database=ecommerce
 
 management.endpoint.health.probes.enabled=true
