feat: add queue message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.data.mongodb.uri=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HO
 spring.data.mongodb.database=ecommerce
 
 management.endpoint.health.probes.enabled=true
+
+storage.connectionstring=${ECOMMERCE_QUEUE_CONNECTION_STRING}
+storage.queues.initevents.name=transactioninitevents
