--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,5 +23,7 @@ spring.data.mongodb.database=ecommerce
 
 management.endpoint.health.probes.enabled=true
 
-storage.connectionstring=${ECOMMERCE_QUEUE_CONNECTION_STRING}
-storage.queues.initevents.name=transactioninitevents
+azurestorage.connectionstring=${TRANSACTION_INITIALIZED_EVENT_QUEUE_CONNECTION_STRING}
+azurestorage.queues.transactioninitevents.name=${TRANSACTION_INITIALIZED_EVENT_QUEUE_NAME}
+
+azurestorage.queues.transactioninitevents.visibilityTimeout=${TRANSACTION_INITIALIZED_EVENT_QUEUE_VISIBILITY_TIMEOUT}
