feat: add message queue in auth request handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,8 @@ spring.data.mongodb.database=ecommerce
 
 management.endpoint.health.probes.enabled=true
 
-azurestorage.connectionstring=${TRANSACTION_INITIALIZED_EVENT_QUEUE_CONNECTION_STRING}
-azurestorage.queues.transactioninitevents.name=${TRANSACTION_INITIALIZED_EVENT_QUEUE_NAME}
+azurestorage.connectionstring=${ECOMMERCE_STORAGE_CONNECTION_STRING}
+azurestorage.queues.transactionauthrequestedtevents.name=${TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME}
+azurestorage.queues.transactionauthrequestedtevents.visibilityTimeout=${TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_VISIBILITY_TIMEOUT}
 
-azurestorage.queues.transactioninitevents.visibilityTimeout=${TRANSACTION_INITIALIZED_EVENT_QUEUE_VISIBILITY_TIMEOUT}
+spring.devtools.restart.enabled=false
