fix(api-spec): fix typo

--- a/api-spec/payment-requests-api.yaml
+++ b/api-spec/payment-requests-api.yaml
@@ -188,7 +188,7 @@ components:
             not localized); example: Service Unavailable
       required:
         - faultCodeCategory
-        - faultCodeCategory
+        - faultCodeDetail
     ProblemJson:
       type: object
       properties:
