--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -190,12 +190,19 @@ components:
     Iban:
       type: string
       pattern: '[a-zA-Z]{2}[0-9]{2}[a-zA-Z0-9]{1,30}'
+    PaymentContextCode:
+      description: Payment context code used for verifivaRPT/attivaRPT
+      type: string
+      minLength: 32
+      maxLength: 32
     NewTransactionRequest:
       type: object
       description: Request body for creating a new transaction
       properties:
         rptId:
           $ref: '#/components/schemas/RptId'
+        paymentContextCode:
+          $ref: '#/components/schemas/PaymentContextCode'
         email:
           type: string
         amount:
@@ -216,6 +223,8 @@ components:
           type: string
         rptId:
           $ref: '#/components/schemas/RptId'
+        status:
+          $ref: "#/components/schemas/TransactionStatus"
         reason:
           type: string
         amount:
@@ -227,6 +236,7 @@ components:
       required:
         - transactionId
         - amount
+        - status
       example:
         amount: 200
     RequestAuthorizationRequest:
@@ -401,6 +411,7 @@ components:
       type: string
       description: Possible statuses a transaction can be in
       enum:
+        - INIT_REQUESTED
         - INITIALIZED
         - AUTHORIZATION_REQUESTED
         - AUTHORIZED
