--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -182,6 +182,58 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ProblemJson"
+  /transactions/{transactionId}/activation-result:
+    summary: PaymentToken related to cdInfoWisp and attivaRPT
+    post:
+      operationId: activationResult
+      parameters:
+        - in: path
+          name: transactionId
+          schema:
+            type: string
+          required: true
+          description: Transaction ID
+      requestBody:
+        $ref: "#/components/requestBodies/ActivationResultRequest"
+      responses:
+        200:
+          description: Activation result successfully processed
+        400:
+          description: Invalid transaction id
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
+        404:
+          description: Transaction not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
+        409:
+          description: Transaction already processed
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
+        502:
+          description: Bad gateway
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
+        504:
+          description: Gateway timeout
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
 components:
   schemas:
     RptId:
@@ -304,16 +356,22 @@ components:
         authorizationCode:
           type: string
           description: Payment gateway-specific authorization code related to the transaction
-        activationResult:
-          $ref: '#/components/schemas/ActivationResult'
-        paymentToken:
-          type: string
         timestampOperation:
           type: string
           format: date-time
           description: Payment timestamp
       required:
+        - authorizationResult
         - timestampOperation
+        - authorizationCode
+    ActivationResultRequest:
+      type: object
+      description: Request body for activation reuslt
+      properties:
+        paymentToken:
+          type: string
+      required:
+        - paymentToken
     TransactionInfo:
       description: Transaction data returned when querying for an existing transaction
       allOf:
@@ -334,12 +392,6 @@ components:
       maximum: 99999999
     AuthorizationResult:
       description: Authorization result
-      type: string
-      enum:
-        - OK
-        - KO
-    ActivationResult:
-      description: Activation result
       type: string
       enum:
         - OK
@@ -495,3 +547,9 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/UpdateTransactionStatusRequest"
+    ActivationResultRequest:
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/ActivationResultRequest"
