--- a/api-spec/payment-requests-api.yaml
+++ b/api-spec/payment-requests-api.yaml
@@ -10,14 +10,14 @@ paths:
       parameters:
         - in: path
           name: rpt_id
-          description: Unique identifier for payment request, so the concatenation of the tax code and notice number.
+          description: Unique identifier for payment request, so the concatenation of the fiscal code and notice number.
           schema:
             type: string
             pattern: '([a-zA-Z\d]{1,35})|(RF\d{2}[a-zA-Z\d]{1,21})'
           required: true
       responses:
         '200':
-          description: New transaction successfully created
+          description: Payment request retrived
           content:
             application/json:
               schema:
@@ -68,7 +68,7 @@ components:
         rptId:
           type: string
           pattern: '([a-zA-Z\d]{1,35})|(RF\d{2}[a-zA-Z\d]{1,21})'
-        paTaxCode:
+        paFiscalCode:
           type: string
           minLength: 11
           maxLength: 11
