feat(notifications-service): add basic client for notifications-service

--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -3,15 +3,24 @@ nodo.readTimeout=10000
 nodo.connectionTimeout=10000
 nodo.retry=2
 nodo.connection.string={"idPSP":"idPsp","idChannel":"idChannel","idBrokerPSP":"idBrokerPSP","password":"password"}
+
 ecommerceSessions.uri=https://localhost/nodo
 ecommerceSessions.readTimeout=10000
 ecommerceSessions.connectionTimeout=10000
+
 ecommercePaymentInstruments.uri=https://localhost/nodo
 ecommercePaymentInstruments.readTimeout=10000
 ecommercePaymentInstruments.connectionTimeout=10000
+
 paymentTransactionsGateway.uri=http://localhost/pgs
 paymentTransactionsGateway.readTimeout=10000
 paymentTransactionsGateway.connectionTimeout=10000
+
+notificationsService.uri=http://localhost/notifications-service
+notificationsService.readTimeout=10000
+notificationsService.connectionTimeout=10000
+notificationsService.apiKey=notifications-service-api-key
+
 spring.data.mongodb.uri=mongodb://mongo:mongo@$mongo:6080/?ssl=true&replicaSet=globaldb
 spring.data.mongodb.database=ecommerce
 spring.redis.host=redis
