fix payment instruments base uri

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ ecommerceSessions.connectionTimeout=${ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT}
 paymentTransactionsGateway.uri=${PAYMENT_TRANSACTIONS_GATEWAY_URI}/
 paymentTransactionsGateway.readTimeout=${PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT}
 paymentTransactionsGateway.connectionTimeout=${PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT}
-ecommercePaymentInstruments.uri=${ECOMMERCE_PAYMENT_INSTRUMENTS_URI}/payment-instruments/psps
+ecommercePaymentInstruments.uri=${ECOMMERCE_PAYMENT_INSTRUMENTS_URI}/payment-methods/psps
 ecommercePaymentInstruments.readTimeout=${ECOMMERCE_PAYMENT_INSTRUMENTS_READ_TIMEOUT}
 ecommercePaymentInstruments.connectionTimeout=${ECOMMERCE_PAYMENT_INSTRUMENTS_CONNECTION_TIMEOUT}
 spring.data.mongodb.uri=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/?ssl=false
